# airtable-schema

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airtable_schema/: __init__.py  cli.py  fetch.py  schema.py
tests/: example.schema  test_airtable_schema.py
