[tool.poetry]
name = "airtable-schema"
version = "0.1.0"
description = ""
authors = ["David Buckley <buckley.w.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^6.7"
selenium = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.610.0"
pytest-cov = "^2.5"
pylint = "^1.9"
black = "^18.3-alpha.0"
pre-commit = "^1.10"

[tool.poetry.scripts]
airtable = 'airtable_schema.cli:main'
