[tool.poetry]
name = "airtable-schema"
version = "0.1.1"
description = "Schema management for Airtable"
authors = ["David Buckley <buckley.w.david@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/buckley-w-david/airtable-schema"
homepage = "https://github.com/buckley-w-david/airtable-schema"

[tool.poetry.dependencies]
python = "^3.6"
click = "^6.7"
selenium = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mypy = "^0.610.0"
pytest-cov = "^2.5"
pylint = "^1.9"
black = "^18.3-alpha.0"
pre-commit = "^1.10"

[tool.poetry.scripts]
airtable = 'airtable_schema.cli:main'
